# GM-NTG-Data

./: .gitignore  CMakeLists.txt  CMakePresets.json  DATA_GENERATOR_CONFIG.md  LICENSE  README.md  TRANSFER_FEATURE.md
data/: .gitkeep
output/: .gitkeep  README.md  log_20251013_164900.txt  log_20251013_165726.txt  log_20251013_171352.txt  log_20251013_171957.txt  log_20251013_220926.txt  log_20251013_224108.txt  log_20251013_225220.txt  log_20251014_075222.txt  log_20251014_090957.txt  log_20251014_125528.txt  log_20251014_132928.txt  log_20251014_135728.txt  log_20251023_141609.txt  log_20251023_154449.txt
output/cases/: case_20251013_220926.csv  case_20251013_224108.csv  case_20251013_225009.csv  case_20251013_225220.csv  case_20251014_080833.csv  case_20251014_090957.csv  case_20251014_125528.csv  case_20251014_131450.csv  case_20251023_141609.csv  case_20251023_154449.csv  case_20251023_180759.csv  case_20251024_064442.csv  case_20251024_074953.csv
output/logs/: log_20251013_225009.txt  log_20251014_072542.txt  log_20251014_074707.txt  log_20251014_080203.txt  log_20251014_080833.txt  log_20251014_081342.txt  log_20251014_131450.txt  log_20251023_175657.txt  log_20251023_180752.txt  log_20251023_180755.txt  log_20251023_180757.txt  log_20251023_180759.txt  log_20251023_180801.txt  log_20251024_064442.txt  log_20251024_072004.txt  log_20251024_074953.txt
src/: case_generator.cpp  case_generator.h  csv_writer.cpp  csv_writer.h  demand_generator.cpp  demand_generator.h  demand_generator_v2.h  logger.h  main.cpp  main_v2.cpp
